Homework8/force-app/main/default/objects/logger_framework__e/logger_framework__e.object-meta.xml
<CustomObject>
    <label>logger framework</label>
    <pluralLabel>logger frameworks</pluralLabel>
</CustomObject>