Homework8/force-app/main/default/objects/logger_framework__e/fields/Context_Name__c.field-meta.xml
<CustomField>
    <fullName>Context_Name__c</fullName>
    <label>Context_Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>