Homework8/force-app/main/default/objects/logger_framework__e/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Message level</description>
    <label>Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>