Homework8/force-app/main/default/objects/logger_framework__e/fields/Log_Message__c.field-meta.xml
<CustomField>
    <fullName>Log_Message__c</fullName>
    <label>Log Message</label>
    <length>200</length>
    <type>Text</type>
</CustomField>