Homework8/force-app/main/default/objects/logger_framework__e/fields/payload__c.field-meta.xml
<CustomField>
    <fullName>payload__c</fullName>
    <label>payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>